--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 	<p>Todo List App | CareerDevs</p>
+	<button id="displayTodosButton">Display Todos</button>
+	<button id="toggleAllButton">Toggle All</button>
 
 <script src="app.js"></script>
 </body>
