--- a/index.html
+++ b/index.html
@@ -6,9 +6,33 @@
 </head>
 <body>
 	<p>Todo List App | CareerDevs</p>
-	<button id="displayTodosButton">Display Todos</button>
-	<button id="toggleAllButton">Toggle All</button>
-
+	<div>
+		<button onclick="handlers.displayTodos()">Display Todos</button>
+		<button onclick="handlers.toggleAll()">Toggle All</button>
+	</div>
+	
+	
+	<div>
+		<!--There should be a button for adding todos-->
+		<button onclick="handlers.addTodo()">Add</button>
+		<input id="addTodoTextInput" type="text"/>
+	</div>
+	<div>
+		<!--There should be a button for changing a todo-->
+		<button onclick="handlers.changeTodo()">Change Todo</button>
+		<input id="changeTodoPositionInput" type="number"/>
+		<input id="changeTodoTextInput" type="text"/>
+	</div>
+	<div>
+		<!--There should be a button for deleting a todo-->
+		<button onclick="handlers.deleteTodo()">Delete Todo</button>
+		<input id="deleteTodoPositionInput" type="number"/>
+	</div>
+	<div>
+		<!--There should be a button for toggling a todo-->
+		<button onclick="handlers.toggleCompleted()">Toggle Completed</button>
+		<input id="toggleCompletedPositionInput" type="number"/>
+	</div>
 <script src="app.js"></script>
 </body>
 </html>
